--- a/Web_part/templates/home.html
+++ b/Web_part/templates/home.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
- 
+
 
     <!-- Add font awasome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -29,8 +29,9 @@
 </head>
 
 <body>
-    <div id="preloader"></div>
 
+    <div id="preloader"></div>
+    <div class="backdrop"></div>
 
     <navbar>
 
@@ -188,7 +189,8 @@
                                     <a href="https://github.com/Raj-Gurjar" target="_blank">
                                         <i class="fa fa-brands fa-github" aria-hidden="true"></i></a>
 
-                                    <a href="" target="_blank"><i class="fa fa-brands fa-instagram" aria-hidden="true"></i></a>
+                                    <a href="" target="_blank"><i class="fa fa-brands fa-instagram"
+                                            aria-hidden="true"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -212,7 +214,8 @@
                                     <a href="https://github.com/hemantsinghrajput" target="_blank"><i
                                             class="fa fa-brands fa-github" aria-hidden="true"></i></a>
 
-                                    <a href="" target="_blank"><i class="fa fa-brands fa-instagram" aria-hidden="true"></i></a>
+                                    <a href="" target="_blank"><i class="fa fa-brands fa-instagram"
+                                            aria-hidden="true"></i></a>
 
                                 </div>
                             </div>
