--- a/Web_part/templates/movie.html
+++ b/Web_part/templates/movie.html
@@ -34,6 +34,9 @@
 </style>
 
 <body>
+    <!-- <div id="preloader"></div> -->
+    <div class="backdrop"></div>
+
 
 
 
@@ -58,7 +61,7 @@
                 <span class="nav_link_title">Recommender</span>
             </a>
 
-          
+
 
 
         </div>
@@ -243,13 +246,13 @@
 
 
 
-   
-   
 
-            <!--!------ Add Js ------>
 
-            <!-- external js -->
-            <script src="/static/script.js" async defer></script>
+
+    <!--!------ Add Js ------>
+
+    <!-- external js -->
+    <script src="/static/script.js" async defer></script>
 
 
 </body>
