--- a/Web_part/templates/movie.html
+++ b/Web_part/templates/movie.html
@@ -33,12 +33,9 @@
     }
 </style>
 
-<body>
-    <!-- <div id="preloader"></div> -->
+<body onload="loading()">
+    <div id="preloader"></div>
     <div class="backdrop"></div>
-
-
-
 
     <navbar>
 
