--- a/Web_part/templates/movie.html
+++ b/Web_part/templates/movie.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
 
     <title>Movie Recommender</title>
+    <link rel="icon" type="image/x-icon" href="../static/imgs/favicon.png">
+
 
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
