--- a/Web_part/templates/home.html
+++ b/Web_part/templates/home.html
@@ -6,7 +6,7 @@
 
     <title>Movie Recommender</title>
     <link rel="icon" type="image/x-icon" href="../static/imgs/favicon.png">
-    
+
 
 
     <meta name="description" content="">
@@ -80,12 +80,13 @@
                         <h1>MOVIE<br>RECOMMENDER</h1>
                     </div>
 
+                    
 
                     <!-- ----------------  search bar ---------------------- -->
 
 
                     <form id="search-form" action="/" method="POST">
-                        <input id="search-input" type="text" name="search" placeholder="Search a Movie...">
+                        <input id="search-input" type="text" name="search" placeholder="Select or Type a Movie...">
 
                         <button id="search-button" type="submit"><i class="fa fa-search"></i></button>
                     </form>
